# rust-kernel

./: .gitignore  Cargo.toml  build.rs  build.sh  rust-toolchain.toml  test.s  x86_64-rust_kernel.json  x86_64-unknown-kernel.json  x86_64-unknown-rust_kernel.json
.cargo/: config.toml
init/src/: main.rs
kernel/: Cargo.toml  build.rs  linker.ld  memory_regions.md
kernel/src/: allocator.rs  backtrace.rs  cli.rs  elf.rs  fs.rs  gdt.rs  initrd.rs  interrupts.rs  main.rs  msr.rs  paging.rs  panic.rs  process.rs  qemu.rs  ringbuf.rs  scheduler.rs  serial.rs  symbols.rs  syscall.rs  tests.rs  userspace.rs  utils.rs  vga.rs
rt/: Cargo.toml
rt/src/: allocator.rs  lib.rs  panic.rs  print.rs  syscall.rs
shared_consts/: Cargo.toml
shared_consts/src/: lib.rs
src/: allocator.rs  cli.rs  gdt.rs  initrd.rs  interrupts.rs  main.rs  paging.rs  panic.rs  pic.rs  serial.rs  vga.rs
syscall_nbs/: Cargo.toml
syscall_nbs/src/: lib.rs
userspace/cli/: Cargo.toml
userspace/cli/src/: main.rs
userspace/ls/: Cargo.toml
userspace/ls/src/: main.rs
userspace/shutdown/: Cargo.toml
userspace/shutdown/src/: main.rs
