[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.12.0"
x86_64 = "0.15.4"
uart_16550 = "0.6.0"
pic8259 = "0.11.0"
pc-keyboard = "0.9.0"
arrayvec = { version = "0.7.6", default-features = false }
linked_list_allocator = "0.10.6"
elf = { version = "0.8.0", default-features = false, features = ["alloc", "to_str"] } # TODO : try to remove alloc feature ? and the to_str feature ?
syscall_nbs = { path = "../syscall_nbs" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 300
test-success-exit-code = 33
